Improve validation. Improve documentation. Relates to #60